--- a/vidly/vidly.csproj
+++ b/vidly/vidly.csproj
@@ -187,6 +187,10 @@
     <Compile Include="Migrations\202102251422348_AddmembershipType.Designer.cs">
       <DependentUpon>202102251422348_AddmembershipType.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202102251438455_PopulateMembershipTypes.cs" />
+    <Compile Include="Migrations\202102251438455_PopulateMembershipTypes.Designer.cs">
+      <DependentUpon>202102251438455_PopulateMembershipTypes.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Customer.cs" />
@@ -285,6 +289,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202102251422348_AddmembershipType.resx">
       <DependentUpon>202102251422348_AddmembershipType.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202102251438455_PopulateMembershipTypes.resx">
+      <DependentUpon>202102251438455_PopulateMembershipTypes.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
