--- a/vidly/vidly.csproj
+++ b/vidly/vidly.csproj
@@ -191,6 +191,10 @@
     <Compile Include="Migrations\202102251438455_PopulateMembershipTypes.Designer.cs">
       <DependentUpon>202102251438455_PopulateMembershipTypes.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202102251518556_ApplyNotationsToCustomer.cs" />
+    <Compile Include="Migrations\202102251518556_ApplyNotationsToCustomer.Designer.cs">
+      <DependentUpon>202102251518556_ApplyNotationsToCustomer.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Customer.cs" />
@@ -292,6 +296,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202102251438455_PopulateMembershipTypes.resx">
       <DependentUpon>202102251438455_PopulateMembershipTypes.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202102251518556_ApplyNotationsToCustomer.resx">
+      <DependentUpon>202102251518556_ApplyNotationsToCustomer.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
