--- a/vidly/vidly.csproj
+++ b/vidly/vidly.csproj
@@ -195,6 +195,10 @@
     <Compile Include="Migrations\202102251518556_ApplyNotationsToCustomer.Designer.cs">
       <DependentUpon>202102251518556_ApplyNotationsToCustomer.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202102251616042_AddNameToMemberShipTypeTable.cs" />
+    <Compile Include="Migrations\202102251616042_AddNameToMemberShipTypeTable.Designer.cs">
+      <DependentUpon>202102251616042_AddNameToMemberShipTypeTable.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Customer.cs" />
@@ -299,6 +303,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202102251518556_ApplyNotationsToCustomer.resx">
       <DependentUpon>202102251518556_ApplyNotationsToCustomer.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202102251616042_AddNameToMemberShipTypeTable.resx">
+      <DependentUpon>202102251616042_AddNameToMemberShipTypeTable.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
