--- a/vidly/vidly.csproj
+++ b/vidly/vidly.csproj
@@ -199,6 +199,10 @@
     <Compile Include="Migrations\202102251616042_AddNameToMemberShipTypeTable.Designer.cs">
       <DependentUpon>202102251616042_AddNameToMemberShipTypeTable.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202102260853348_addBirthdayToCustomer.cs" />
+    <Compile Include="Migrations\202102260853348_addBirthdayToCustomer.Designer.cs">
+      <DependentUpon>202102260853348_addBirthdayToCustomer.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Customer.cs" />
@@ -306,6 +310,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202102251616042_AddNameToMemberShipTypeTable.resx">
       <DependentUpon>202102251616042_AddNameToMemberShipTypeTable.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202102260853348_addBirthdayToCustomer.resx">
+      <DependentUpon>202102260853348_addBirthdayToCustomer.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
