--- a/vidly/vidly.csproj
+++ b/vidly/vidly.csproj
@@ -203,6 +203,10 @@
     <Compile Include="Migrations\202102260853348_addBirthdayToCustomer.Designer.cs">
       <DependentUpon>202102260853348_addBirthdayToCustomer.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202102261021300_addMovieModelToDB.cs" />
+    <Compile Include="Migrations\202102261021300_addMovieModelToDB.Designer.cs">
+      <DependentUpon>202102261021300_addMovieModelToDB.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Customer.cs" />
@@ -313,6 +317,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202102260853348_addBirthdayToCustomer.resx">
       <DependentUpon>202102260853348_addBirthdayToCustomer.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202102261021300_addMovieModelToDB.resx">
+      <DependentUpon>202102261021300_addMovieModelToDB.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
