--- a/vidly/vidly.csproj
+++ b/vidly/vidly.csproj
@@ -207,6 +207,10 @@
     <Compile Include="Migrations\202102261021300_addMovieModelToDB.Designer.cs">
       <DependentUpon>202102261021300_addMovieModelToDB.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202102261031347_AddPropertiesToMovieModel.cs" />
+    <Compile Include="Migrations\202102261031347_AddPropertiesToMovieModel.Designer.cs">
+      <DependentUpon>202102261031347_AddPropertiesToMovieModel.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Customer.cs" />
@@ -320,6 +324,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202102261021300_addMovieModelToDB.resx">
       <DependentUpon>202102261021300_addMovieModelToDB.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202102261031347_AddPropertiesToMovieModel.resx">
+      <DependentUpon>202102261031347_AddPropertiesToMovieModel.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
