--- a/vidly/vidly.csproj
+++ b/vidly/vidly.csproj
@@ -211,6 +211,10 @@
     <Compile Include="Migrations\202102261031347_AddPropertiesToMovieModel.Designer.cs">
       <DependentUpon>202102261031347_AddPropertiesToMovieModel.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202102261057492_addMovieGenre.cs" />
+    <Compile Include="Migrations\202102261057492_addMovieGenre.Designer.cs">
+      <DependentUpon>202102261057492_addMovieGenre.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Customer.cs" />
@@ -218,6 +222,7 @@
     <Compile Include="Models\ManageViewModels.cs" />
     <Compile Include="Models\MembershipType.cs" />
     <Compile Include="Models\Movie.cs" />
+    <Compile Include="Models\MovieGenre.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
     <Compile Include="ViewModels\RandomMovieViewModel.cs" />
@@ -327,6 +332,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202102261031347_AddPropertiesToMovieModel.resx">
       <DependentUpon>202102261031347_AddPropertiesToMovieModel.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202102261057492_addMovieGenre.resx">
+      <DependentUpon>202102261057492_addMovieGenre.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
