popolated MovieGenre Table

--- a/vidly/vidly.csproj
+++ b/vidly/vidly.csproj
@@ -215,6 +215,10 @@
     <Compile Include="Migrations\202102261057492_addMovieGenre.Designer.cs">
       <DependentUpon>202102261057492_addMovieGenre.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202102261103143_populateMovieGenre.cs" />
+    <Compile Include="Migrations\202102261103143_populateMovieGenre.Designer.cs">
+      <DependentUpon>202102261103143_populateMovieGenre.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Customer.cs" />
@@ -335,6 +339,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202102261057492_addMovieGenre.resx">
       <DependentUpon>202102261057492_addMovieGenre.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202102261103143_populateMovieGenre.resx">
+      <DependentUpon>202102261103143_populateMovieGenre.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
